Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4293

Query profile should include error log

    XMLWordPrintableJSON

Details

    Description

      The error log is often critical for understanding why a query failed and often contains critical information, e.g. Memory Limit Exceeded reports, scan node errors, etc.

      We should include the error log in the thrift-encoded and pretty-printed runtime profiles so that it's easier to debug query failures from the profile.

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: