IMPALA-4293: query profile should include error log

This puts the string-ified error log into an "Errors:"
field in the profile.

Testing:
Visually checked that the field showed up in the profiles in
the web UI. Ran core tests.

Change-Id: Ib9b7298df6a6f05a8cdb486283ae4728b00a5ef1
Reviewed-on: http://gerrit.cloudera.org:8080/6553
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Impala Public Jenkins